inoa-test/src/test/k3s/test/inoa/groundcontrol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groundcontrol
spec:
  rules:
    - host: groundcontrol.${k3s.ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groundcontrol
                port:
                  name: http
