inoa-test/src/test/k3s/test/inoa/groundcontrol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groundcontrol
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: groundcontrol
